--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,8 @@
 <html>
 	<h1>Welcome to the Rails Installer Demo </h1>
 
-
+<%=link_to "See all users", "/users"%>
+</br>
+<%= link_to "See all classes", "/subclasses"%>
 
 <p>Find me in app/views/welcome/index.html.erb</p>
